bunch of routing performanc improvements